--- a/css/custom.css
+++ b/css/custom.css
@@ -1946,7 +1946,7 @@ span.right {
 }
 
 .tile_stats_count .left {
-    width: 15%;
+    width: 5%;
     float: left;
     height: 65px;
     border-left: 2px solid #ADB2B5;
@@ -4790,7 +4790,7 @@ ul.project_files li a i {
  * bootstrap-vertical-tabs - v1.2.1
  * https://dbtek.github.io/bootstrap-vertical-tabs
  * 2014-11-07
- * Copyright (c) 2014 İsmail Demirbilek
+ * Copyright (c) 2014 Ä°smail Demirbilek
  * License: MIT
  */
 
@@ -5412,7 +5412,7 @@ ul.project_files li a i {
 }
 /* *********  /ecommerce  **************************** */
 /* *********  progressbar  **************************** */
-/*! bootstrap-progressbar v0.8.4 | Copyright (c) 2012-2014 Stephan Groß | MIT license | http://www.minddust.com */
+/*! bootstrap-progressbar v0.8.4 | Copyright (c) 2012-2014 Stephan GroÃŸ | MIT license | http://www.minddust.com */
 
 .progress_summary .progress {
     margin: 5px 0 12px !important;
